--- a/index.html
+++ b/index.html
@@ -5,27 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kababi</title>
-    <script src="https://kit.fontawesome.com/2e43f7e761.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2e43f7e761.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="container_header">
         <nav class="topnav" id="topnav" role="navigation">
           <a href="#" class="Kababi_logo">
-            <img src="img/logo/logo.png" alt="logo_Kababi"/>
+            <img src="img/logo/logo.png" alt="logo_Kababi" />
           </a>
           <div class="topnav_menu">
             <ul class="nav_links">
               <li>
-                <a href="#" class="home">Home<i class="fa-solid fa-chevron-down"></i></a>
+                <a href="#" class="home"
+                  >Home<i class="fa-solid fa-chevron-down"></i
+                ></a>
               </li>
               <li>
                 <a href="#">About</a>
               </li>
               <li>
-              <a href="#">Page<i class="fa-solid fa-chevron-down"></i></a>
+                <a href="#">Page<i class="fa-solid fa-chevron-down"></i></a>
               </li>
               <li>
                 <a href="#">Shop<i class="fa-solid fa-chevron-down"></i></a>
@@ -37,256 +42,190 @@
             <div>
               <ul class="nav_links2">
                 <li>
-                  <img src="img/slider/appel.png" width="19px" alt="Téléphone">
+                  <img
+                    src="img/slider/appel.png"
+                    width="19px"
+                    alt="Téléphone"
+                  />
                   <a href="#">+012 (345) 6789</a>
                 </li>
                 <li>
-                  <a href="#" class="btn_nav">BOOK A TABLE<i class="fa-solid fa-arrow-right"></i></a>
+                  <a href="#" class="btn_nav"
+                    >BOOK A TABLE<i class="fa-solid fa-arrow-right"></i
+                  ></a>
                 </li>
               </ul>
             </div>
           </div>
           <a href="#" class="icon_hamburger">
             <svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
-              <path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd"/>
+              <path
+                d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z"
+                fill="#FFF"
+                fill-rule="evenodd"
+              />
             </svg>
           </a>
         </nav>
         <section class="contenu_header">
           <div class="imgAndtitle">
-            <img src="img/slider/img_bg2.png" alt="best quality food">
+            <img src="img/slider/img_bg2.png" alt="best quality food" />
             <h1>BEST QUALITY FOODS</h1>
           </div>
-          <a href="#">Explore our menu <i class="fa-solid fa-arrow-right"></i></a>
+          <a href="#"
+            >Explore our menu <i class="fa-solid fa-arrow-right"></i
+          ></a>
         </section>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="bg_color">
-      <section class="choose_your_best_category">
-        <p class="category_absolute">CATEGORY</p>
-        <div class="title_choose_your_category">
-          <h2>choose your best category</h2>
-          <p>Best foods for you & family</p>
-        </div>
-          <div class="cards">
-              <article class="card">
-                <i class="fa-solid fa-burger icon_choose_category"></i>
-                <p>Cheeseburger</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-pizza-slice icon_choose_category"></i>
-                <p>Pizza Slice</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-mug-hot icon_choose_category"></i>
-                <p>Coffee-Cup</p
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-drumstick-bite icon_choose_category"></i>
-                <p>Chicken-Leg</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-martini-glass-citrus icon_choose_category"></i>
-                <p>Energy Drink</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-shrimp icon_choose_category"></i>
-                <p>Schrimp</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
+      <!-- <section class="bg_color">
+        <section class="choose_your_best_category">
+          <p class="category_absolute">CATEGORY</p>
+          <div class="title_choose_your_category">
+            <h2>choose your best category</h2>
+            <p>Best foods for you & family</p>
           </div>
-      </section>
-    </section>
-      <section class="why_choose_us">
-        <img class="circle_food" src="img/gallery/imgfood2.jpg" alt="saumon fumé avocat concombre roquette">
+          <div class="cards">
+            <article class="card">
+              <i class="fa-solid fa-burger icon_choose_category"></i>
+              <p>Cheeseburger</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i class="fa-solid fa-pizza-slice icon_choose_category"></i>
+              <p>Pizza Slice</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i class="fa-solid fa-mug-hot icon_choose_category"></i>
+              <p>Coffee-Cup</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i class="fa-solid fa-drumstick-bite icon_choose_category"></i>
+              <p>Chicken-Leg</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i
+                class="fa-solid fa-martini-glass-citrus icon_choose_category"
+              ></i>
+              <p>Energy Drink</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i class="fa-solid fa-shrimp icon_choose_category"></i>
+              <p>Schrimp</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+          </div>
+        </section>
+      </section> -->
+      <!-- <section class="why_choose_us">
+        <img
+          class="circle_food"
+          src="img/gallery/imgfood2.jpg"
+          alt="saumon fumé avocat concombre roquette"
+        />
         <section class="images_top_choose_us">
-          <img src="img/gallery/imgfood1.png" alt="crêpes">
-          <img src="img/gallery/imgfood3.png" alt="Des oeufs">
+          <img src="img/gallery/imgfood1.png" alt="crêpes" />
+          <img src="img/gallery/imgfood3.png" alt="Des oeufs" />
         </section>
         <section class="about_us">
           <p class="about_us_absolute">About US</p>
           <div class="title_about_us">
             <h2>Why choose us</h2>
             <p>Best foods for you & family</p>
-            <img src="img/about-us/iconbgabout.png" class="icon_about_absolute" alt="">
-          </div> 
+            <img
+              src="img/about-us/iconbgabout.png"
+              class="icon_about_absolute"
+              alt=""
+            />
+          </div>
           <article class="contenu_about_us">
-            <img src="img/about-us/img_aboutus_home1.jpg" alt="">
+            <img src="img/about-us/img_aboutus_home1.jpg" alt="" />
             <div class="text_about_us">
-              <p>Set ut perspiciatis unde omnis iste natus error sit voluptatem accusatium doloremque laudantium totam opeam eaque ipsa quae abillo invtore verttis et quasi architecto veatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quiluptas</p>
-              <a href="#" class="btn_about_us">Discover more<i class="fa-solid fa-arrow-right"></i></a>
+              <p>
+                Set ut perspiciatis unde omnis iste natus error sit voluptatem
+                accusatium doloremque laudantium totam opeam eaque ipsa quae
+                abillo invtore verttis et quasi architecto veatae vitae dicta
+                sunt explicabo. Nemo enim ipsam voluptatem quiluptas
+              </p>
+              <a href="#" class="btn_about_us"
+                >Discover more<i class="fa-solid fa-arrow-right"></i
+              ></a>
             </div>
           </article>
         </section>
-        <section class="try_your_special_offer">
-          <img class="pain" src="img/our-menu/imgbg-our-menu.jpg" alt="pain">
-          <img src="img/our-menu/img2bg-our-menu.jpg" alt="steak" class="steak">
-          <span class="our_menu_absolute">OUR MENU</span>
-          <div class="title_special_offer">
-            <h2>Try our special offer</h2>
-            <p>Best foods for you & family</p>
-          </div>
-          <div class="contenu_try_your_special_offer">
-            <article class="cards">
-              <div class="text_cards">
-                <h3>Raw Scallops From Erquy</h3>
-                <p>Candied jerusalem artichokes, truffle</p>
-              </div>
-              <p class="prix">89</p>
-            </article>
-            <article class="cards">
-              <div class="text_cards">
-                <h3>Corrèze Pan-seared Veal Liver</h3>
-                <p>Olive oil mashed potato, onion jus</p>
-              </div>
-              <p class="prix">89</p>
-            </article>
-            <article class="cards">
-              <div class="text_cards">
-                <h3>Celeriac and Truffle Ravioli</h3>
-                <p>Roasted langoustine, consommé</p>
-              </div>
-              <p class="prix">89</p>
-            </article>
-            <article class="cards">
-              <div class="text_cards">
-                <h3>Grilled Veal Filet Mignon</h3>
-                <p>Pumpkin, endives with hazelnuts</p>
-              </div>
-              <p class="prix">89</p>
-            </article>
-            <article class="cards">
-              <div class="text_cards">
-                <h3>Cod Filet Cooked on One Slide</h3>
-                <p>Chorizo, chickpea espuma, pequillos</p>
-              </div>
-              <p class="prix">89</p>
-            </article>
-            <article class="cards">
-              <div class="text_cards">
-                <h3>Tender Octopus and Fennel</h3>
-                <p>citrus, wild rocjet condiment</p>
-              </div>
-              <p class="prix">89</p>
-            </article>
-            <article class="cards">
-              <div class="text_cards">
-                <h3>Sea Bass Ceviche</h3>
-                <p>Avocado, butternut, lime</p>
-              </div>
-              <p class="prix">89</p>
-            </article>
-            <article class="cards">
-              <div class="text_cards">
-                <h3>Viennese Veal Cutlet</h3>
-                <p>Ricotta and spinach gnocchi, Caccio de Pepe</p>
-              </div>
-              <p class="prix">89</p>
-            </article>
-          </div>
-        </section>
-      </section>
-      <section class="latest-news">
-        <div class="latest-news-title">
-          <h2>LATEST NEWS & BLOG</h2>
+      </section> -->
+      <section class="try_your_special_offer">
+        <img class="pain" src="img/our-menu/imgbg-our-menu.jpg" alt="pain" />
+        <img src="img/our-menu/img2bg-our-menu.jpg" alt="steak" class="steak" />
+        <p class="our_menu_absolute">OUR MENU</p>
+        <div class="title_special_offer">
+          <h2>Try our special offer</h2>
           <p>Best foods for you & family</p>
         </div>
-        <article class="news-container">
-          <div class="news">
-            <img src="" alt="" />
-            <span><i class="fa-solid fa-user"></i>BY WILLIAMSON</span>
-            <span
-              >25 AUG 2021 <i class="fa-sharp fa-light fa-calendar-days"></i
-            ></span>
-          </div>
-          <div class="news">
-            <img src="" alt="" />
-            <span><i class="fa-solid fa-user"></i>BY WILLIAMSON</span>
-            <span
-              >25 AUG 2021 <i class="fa-sharp fa-light fa-calendar-days"></i
-            ></span>
-          </div>
-          <div class="news">
-            <img src="" alt="" />
-            <span><i class="fa-solid fa-user"></i>BY WILLIAMSON</span>
-            <span
-              >25 AUG 2021 <i class="fa-sharp fa-light fa-calendar-days"></i
-            ></span>
-          </div>
-        </article>
+        <div class="contenu_try_your_special_offer">
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Raw Scallops From Erquy</h3>
+              <p>Candied jerusalem artichokes, truffle</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Corrèze Pan-seared Veal Liver</h3>
+              <p>Olive oil mashed potato, onion jus</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Celeriac and Truffle Ravioli</h3>
+              <p>Roasted langoustine, consommé</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Grilled Veal Filet Mignon</h3>
+              <p>Pumpkin, endives with hazelnuts</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Cod Filet Cooked on One Slide</h3>
+              <p>Chorizo, chickpea espuma, pequillos</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Tender Octopus and Fennel</h3>
+              <p>citrus, wild rocjet condiment</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Sea Bass Ceviche</h3>
+              <p>Avocado, butternut, lime</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Viennese Veal Cutlet</h3>
+              <p>Ricotta and spinach gnocchi, Caccio de Pepe</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+        </div>
       </section>
     </main>
-
-    <footer>
-      <div class="footer-title">
-        <img src="./img/logo/logo2.png" alt="" />
-      </div>
-      <div class="footer-links">
-        <div class="footer-link">
-          <h3>About</h3>
-          <ul>
-            <li>Home</li>
-            <li>Our Story</li>
-            <li>The setting</li>
-            <li>The suites</li>
-            <li>Food lists</li>
-          </ul>
-        </div>
-        <div class="footer-link">
-          <h3>Facilities</h3>
-          <ul>
-            <li>The Fontus Spa</li>
-            <li>Experiences</li>
-            <li>Private Functions</li>
-            <li>Gallery, Events</li>
-            <li>Special Offers</li>
-          </ul>
-        </div>
-        <div class="footer-link-input">
-          <h3>Newsletters</h3>
-          <p>
-            Dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
-            incididunt labore et dolore
-          </p>
-          <div class="email-input">
-            <input type="text" placeholder="Enter Email Adress" />
-            <button>
-              <i class="fa-solid fa-arrow-right" style="color: #ffffff"></i>
-            </button>
-          </div>
-        </div>
-        <div class="footer-link">
-          <h3>Contact</h3>
-          <ul>
-            <li>
-              <i class="fa-solid fa-location-dot"></i>56 Main Street, D-Block,
-              2nd Floor, Melbourne, Australia
-            </li>
-            <li><i class="fa-solid fa-envelope-open"></i>support@gmail.com</li>
-            <li><i class="fa-solid fa-phone-flip"></i>+012 (345) 67 899</li>
-            <li><i class="fa-sharp fa-regular fa-clock"></i>08 am - 06 pm</li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>
-          Copyright c 2021 The Kababi - Restaurant HTML Template. Designed by
-          <a href="#">Themesflat</a>
-        </p>
-        <img src="./img/footer/iconup@2x.png" alt="" />
-        <div class="footer-socials">
-          <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-          <a href=""><i class="fa-brands fa-twitter"></i></a>
-          <a href=""><i class="fa-brands fa-youtube"></i></a>
-          <a href=""><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
