--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kababi</title>
-    <script src="https://kit.fontawesome.com/2e43f7e761.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2e43f7e761.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
@@ -14,18 +17,20 @@
       <div class="container_header">
         <nav class="topnav" id="topnav" role="navigation">
           <a href="#" class="Kababi_logo">
-            <img src="img/logo/logo.png" alt="logo_Kababi"/>
+            <img src="img/logo/logo.png" alt="logo_Kababi" />
           </a>
           <div class="topnav_menu">
             <ul class="nav_links">
               <li>
-                <a href="#" class="home">Home<i class="fa-solid fa-chevron-down"></i></a>
+                <a href="#" class="home"
+                  >Home<i class="fa-solid fa-chevron-down"></i
+                ></a>
               </li>
               <li>
                 <a href="#">About</a>
               </li>
               <li>
-              <a href="#">Page<i class="fa-solid fa-chevron-down"></i></a>
+                <a href="#">Page<i class="fa-solid fa-chevron-down"></i></a>
               </li>
               <li>
                 <a href="#">Shop<i class="fa-solid fa-chevron-down"></i></a>
@@ -37,95 +42,124 @@
             <div>
               <ul class="nav_links2">
                 <li>
-                  <img src="img/slider/appel.png" width="19px" alt="Téléphone">
+                  <img
+                    src="img/slider/appel.png"
+                    width="19px"
+                    alt="Téléphone"
+                  />
                   <a href="#">+012 (345) 6789</a>
                 </li>
                 <li>
-                  <a href="#" class="btn_nav">BOOK A TABLE<i class="fa-solid fa-arrow-right"></i></a>
+                  <a href="#" class="btn_nav"
+                    >BOOK A TABLE<i class="fa-solid fa-arrow-right"></i
+                  ></a>
                 </li>
               </ul>
             </div>
           </div>
           <a href="#" class="icon_hamburger">
             <svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
-              <path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd"/>
+              <path
+                d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z"
+                fill="#FFF"
+                fill-rule="evenodd"
+              />
             </svg>
           </a>
         </nav>
         <section class="contenu_header">
           <div class="imgAndtitle">
-            <img src="img/slider/img_bg2.png" alt="best quality food">
+            <img src="img/slider/img_bg2.png" alt="best quality food" />
             <h1>BEST QUALITY FOODS</h1>
           </div>
-          <a href="#">Explore our menu <i class="fa-solid fa-arrow-right"></i></a>
+          <a href="#"
+            >Explore our menu <i class="fa-solid fa-arrow-right"></i
+          ></a>
         </section>
       </div>
     </header>
     <main>
       <section class="bg_color">
-      <section class="choose_your_best_category">
-        <p class="category_absolute">CATEGORY</p>
-        <div class="title_choose_your_category">
-          <h2>choose your best category</h2>
-          <p>Best foods for you & family</p>
-        </div>
-          <div class="cards">
-              <article class="card">
-                <i class="fa-solid fa-burger icon_choose_category"></i>
-                <p>Cheeseburger</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-pizza-slice icon_choose_category"></i>
-                <p>Pizza Slice</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-mug-hot icon_choose_category"></i>
-                <p>Coffee-Cup</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-drumstick-bite icon_choose_category"></i>
-                <p>Chicken-Leg</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-martini-glass-citrus icon_choose_category"></i>
-                <p>Energy Drink</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
-              <article class="card">
-                <i class="fa-solid fa-shrimp icon_choose_category"></i>
-                <p>Schrimp</p>
-                <i class="fa-solid fa-arrow-right"></i>
-              </article>
+        <section class="choose_your_best_category">
+          <p class="category_absolute">CATEGORY</p>
+          <div class="title_choose_your_category">
+            <h2>choose your best category</h2>
+            <p>Best foods for you & family</p>
           </div>
+          <div class="cards">
+            <article class="card">
+              <i class="fa-solid fa-burger icon_choose_category"></i>
+              <p>Cheeseburger</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i class="fa-solid fa-pizza-slice icon_choose_category"></i>
+              <p>Pizza Slice</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i class="fa-solid fa-mug-hot icon_choose_category"></i>
+              <p>Coffee-Cup</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i class="fa-solid fa-drumstick-bite icon_choose_category"></i>
+              <p>Chicken-Leg</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i
+                class="fa-solid fa-martini-glass-citrus icon_choose_category"
+              ></i>
+              <p>Energy Drink</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+            <article class="card">
+              <i class="fa-solid fa-shrimp icon_choose_category"></i>
+              <p>Schrimp</p>
+              <i class="fa-solid fa-arrow-right"></i>
+            </article>
+          </div>
+        </section>
       </section>
-    </section>
-    <section class="why_choose_us">
-      <img class="circle_food" src="img/gallery/imgfood2.jpg" alt="saumon fumé avocat concombre roquette">
-      <section class="images_top_choose_us">
-        <img src="img/gallery/imgfood1.png" alt="crêpes">
-        <img src="img/gallery/imgfood3.png" alt="Des oeufs">
-      </section>
-      <section class="about_us">
+      <section class="why_choose_us">
+        <img
+          class="circle_food"
+          src="img/gallery/imgfood2.jpg"
+          alt="saumon fumé avocat concombre roquette"
+        />
+        <section class="images_top_choose_us">
+          <img src="img/gallery/imgfood1.png" alt="crêpes" />
+          <img src="img/gallery/imgfood3.png" alt="Des oeufs" />
+        </section>
+        <section class="about_us">
           <p class="about_us_absolute">About US</p>
           <div class="title_about_us">
             <h2>Why choose us</h2>
             <p>Best foods for you & family</p>
-            <img src="img/about-us/iconbgabout.png" class="icon_about_absolute" alt="">
-          </div> 
+            <img
+              src="img/about-us/iconbgabout.png"
+              class="icon_about_absolute"
+              alt=""
+            />
+          </div>
           <article class="contenu_about_us">
-            <img src="img/about-us/img_aboutus_home1.jpg" alt="">
+            <img src="img/about-us/img_aboutus_home1.jpg" alt="" />
             <div class="text_about_us">
-              <p>Set ut perspiciatis unde omnis iste natus error sit voluptatem accusatium doloremque laudantium totam opeam eaque ipsa quae abillo invtore verttis et quasi architecto veatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quiluptas</p>
-              <a href="#" class="btn_about_us">Discover more<i class="fa-solid fa-arrow-right"></i></a>
+              <p>
+                Set ut perspiciatis unde omnis iste natus error sit voluptatem
+                accusatium doloremque laudantium totam opeam eaque ipsa quae
+                abillo invtore verttis et quasi architecto veatae vitae dicta
+                sunt explicabo. Nemo enim ipsam voluptatem quiluptas
+              </p>
+              <a href="#" class="btn_about_us"
+                >Discover more<i class="fa-solid fa-arrow-right"></i
+              ></a>
             </div>
           </article>
+        </section>
       </section>
-    </section>
-    <section class="try_your_special_offer">
+      <section class="try_your_special_offer">
         <img class="pain" src="img/our-menu/imgbg-our-menu.jpg" alt="pain" />
         <img src="img/our-menu/img2bg-our-menu.jpg" alt="steak" class="steak" />
         <p class="our_menu_absolute">OUR MENU</p>
@@ -199,16 +233,25 @@
           <p>Best foods for you & family</p>
         </div>
         <article class="resto-photos">
-          <img src="./img/gallery/img1gallerybox.jpg" alt="pâtes, oeuf, surimi et crudités">
+          <img
+            src="./img/gallery/img1gallerybox.jpg"
+            alt="pâtes, oeuf, surimi et crudités"
+          />
           <div class="photos-together">
-            <img src="./img/gallery/img2gallerybox.jpg" alt="sandwich">
-            <img src="./img/gallery/img3gallerybox.jpg" alt="pizza">
+            <img src="./img/gallery/img2gallerybox.jpg" alt="sandwich" />
+            <img src="./img/gallery/img3gallerybox.jpg" alt="pizza" />
           </div>
           <div class="photos-together">
-            <img src="./img/gallery/img4gallerybox.jpg" alt="pâtes, tomates cerises">
-            <img src="./img/gallery/img5gallerybox.jpg" alt="steak">
+            <img
+              src="./img/gallery/img4gallerybox.jpg"
+              alt="pâtes, tomates cerises"
+            />
+            <img src="./img/gallery/img5gallerybox.jpg" alt="steak" />
           </div>
-          <img src="./img/gallery/img6gallerybox.jpg" alt="hamburger et frites">
+          <img
+            src="./img/gallery/img6gallerybox.jpg"
+            alt="hamburger et frites"
+          />
         </article>
         <button>
           VIEW MORE PHOTOS <span><i class="fa-solid fa-arrow-right"></i></span>
@@ -243,7 +286,10 @@
         </div>
         <article class="news-container">
           <div class="news">
-            <img src="./img/blog/img3blohhome01.jpg" alt="Homme entrain d'écrire"
+            <img
+              src="./img/blog/img3blohhome01.jpg"
+              alt="Homme entrain d'écrire"
+            />
             <div class="news-text">
               <div class="date-user">
                 <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
@@ -254,7 +300,10 @@
             </div>
           </div>
           <div class="news">
-            <img src="./img/blog/img1blohhome01.jpg" alt="Femme faisant goûter son plat à un homme" />
+            <img
+              src="./img/blog/img1blohhome01.jpg"
+              alt="Femme faisant goûter son plat à un homme"
+            />
             <div class="news-text">
               <div class="date-user">
                 <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
@@ -265,7 +314,10 @@
             </div>
           </div>
           <div class="news">
-            <img src="./img/blog/img2blohhome01.jpg" alt="Femme mangeant des pâtes">
+            <img
+              src="./img/blog/img2blohhome01.jpg"
+              alt="Femme mangeant des pâtes"
+            />
             <div class="news-text">
               <div class="date-user">
                 <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
@@ -277,12 +329,24 @@
           </div>
         </article>
         <div class="news-photos">
-          <img src="./img/brand/imgbrand3.png" alt="cuillère, fourchette, couteau" >
-          <img src="./img/brand/imgbrand4.png" alt="fourchette, couteau sur une assiette" >
-          <img src="./img/brand/imgbrand5.png" alt="cloche sur une main" >
-          <img src="./img/brand/imgbrand6.png" alt="toque de cuisinier" >
-          <img src="./img/brand/imgbrand1.png" alt="fourchette et couteau croisés sur une assiette" >
-          <img src="./img/brand/imgbrand2.png" alt="cuillère, fourchette, couteau" >
+          <img
+            src="./img/brand/imgbrand3.png"
+            alt="cuillère, fourchette, couteau"
+          />
+          <img
+            src="./img/brand/imgbrand4.png"
+            alt="fourchette, couteau sur une assiette"
+          />
+          <img src="./img/brand/imgbrand5.png" alt="cloche sur une main" />
+          <img src="./img/brand/imgbrand6.png" alt="toque de cuisinier" />
+          <img
+            src="./img/brand/imgbrand1.png"
+            alt="fourchette et couteau croisés sur une assiette"
+          />
+          <img
+            src="./img/brand/imgbrand2.png"
+            alt="cuillère, fourchette, couteau"
+          />
         </div>
       </section>
     </main>
@@ -318,7 +382,7 @@
             incididunt labore et dolore
           </p>
           <div class="email-input">
-            <input type="text" placeholder="Enter Email Adress">
+            <input type="text" placeholder="Enter Email Adress" />
             <button>
               <i class="fa-solid fa-arrow-right" style="color: #ffffff"></i>
             </button>
